[MODIFY] rename response to uuid response and [ADD] new path
